--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="column lg-12 s-intro__content-inner">Welcome World!
 
                         <h1 class="s-intro__content-title">
-                            "Hi! I'm Margie, <br>a Computer Engineering<br>Student"
+                            "Hi! I'm Margie, <br>a Computer<br>Engineering Student"
                         </h1>
 
                         <div class="s-intro__content-buttons">
