--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                     <div class="s-intro__content-bg"></div>
 
-                    <div class="column lg-12 s-intro__content-inner">Welcome Philippines!
+                    <div class="column lg-12 s-intro__content-inner">Welcome World!
 
                         <h1 class="s-intro__content-title">
                             "Hi! I'm Margie, <br>a Computer<br>Engineering Student"
