--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
                         <br><br>
                         My experienced in desktop application development and front-end web development is not well enough, still need more enhancement and practice.
                         However, I also love creating simple yet artistic UI designs.
+                        <br><br>
+                        Year 2024 is a blast!<br>
                         </p>
                     <img src="./images/me/last_page.png" alt="me">
                 </div>
