--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@
                         My experienced in desktop application development and front-end web development is not well enough, still need more enhancement and practice.
                         However, I also love creating simple yet artistic UI designs.
                         <br><br>
-                        Year 2024 is a blast!<br>
+                        My second semester has been transformative, thanks to the invaluable on-the-job training experience at Pedi App. Working alongside industry professionals has provided me with
+                        practical knowledge and skills that will benefit my future career. Contributing to the development of a real-world application like Pedi App has been fulfilling and has
+                        enhanced my understanding of the industry.<br>
                         </p>
                     <img src="./images/me/last_page.png" alt="me">
                 </div>
