--- a/index.html
+++ b/index.html
@@ -285,7 +285,15 @@
                         <br><br>
                         My second semester has been transformative, thanks to the invaluable on-the-job training experience at Pedi App. Working alongside industry professionals has provided me with
                         practical knowledge and skills that will benefit my future career. Contributing to the development of a real-world application like Pedi App has been fulfilling and has
-                        enhanced my understanding of the industry.<br>
+                        enhanced my understanding of the industry.<br><br>
+                        Additionally, defending research study was not easy. Here's the abstract about it: "One major challenge for parents is understanding and meeting their baby's needs and wants,
+                        especially when the baby cannot directly communicate. This project aims to address this issue by developing a device called CRADLETALK, which uses real-time machine learning to
+                        interpret the sounds produced by infants. By translating the cries of infants into five key sounds (such as hunger, burping, discomfort, and sleepiness), the device helps
+                        parents better understand their baby's communication. The device captures the audio through a microphone and processes it using signal processing algorithms like Mel-Frequency
+                        Cepstral Coefficient (MFCC) and machine learning algorithms like Convolutional Neural Network (CNN). Additionally, the device can translate babble into audible voice, facilitating
+                        communication between infants and parents. The device's accuracy, efficiency, relevance, timeliness, and effectiveness will be evaluated through laboratory testing. The success
+                        rates for different sounds varied, but the final test showed improvements, with success rates increasing for certain sounds. Overall, this research project aims to enhance
+                        parent-infant communication and improve the way parents meet their baby's needs."
                         </p>
                     <img src="./images/me/last_page.png" alt="me">
                 </div>
