--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <li><a href="#about" class="smoothscroll">About</a></li>
                     
                         <li><a href="#contact" class="smoothscroll">Contact</a></li>
-                        <li><a href="./resume/Curriculum Vitae.pdf" target="_blank">Curriculum Vitae</a></li>
+                        <li><a href="./resume/manuales-resume.pdf" target="_blank">Curriculum Vitae</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                 </nav> <!-- end s-header__nav -->
