--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
                                 </a>
                             </article> <!-- entry -->
 
-                            <article class="brick entry">
-                                <a href="https://github.com/manZarg/arduino-code-7-segment-display-counter/blob/master/arduino_code_counter_with_7-segment_display.ino" class="entry__link">
+                           <article class="brick brick--double entry">
+                                <a href="">
                                     <div class="entry__thumb">
-                                        <video autoplay muted controls>
-                                            <source src="images/folio/thes1.jpg" alt="">
-                                        </video>
+                                        <img src="images/folio/thes1.jpg" alt="">
+                                        <img src="images/folio/thes2.jpg" alt="">
+                                        <img src="images/folio/thes3.jpg" alt="">
                                     </div>
                                 </a>
                             </article> <!-- entry -->
-
+                            
                         </div> <!-- end bricks-wrapper -->
                     </div> <!-- end masonry -->
                 </div> <!-- end bricks -->
