--- a/index.html
+++ b/index.html
@@ -258,12 +258,10 @@
                                 </a>
                             </article> <!-- entry -->
 
-                           <article class="brick brick--double entry">
-                                <a href="">
+                            <article class="brick entry">
+                                <a href="https://github.com/manZarg/arduino-code-7-segment-display-counter/blob/master/arduino_code_counter_with_7-segment_display.ino" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/thes1.jpg" alt="">
-                                        <img src="images/folio/thes2.jpg" alt="">
-                                        <img src="images/folio/thes3.jpg" alt="">
+                                            <source src="images/folio/thes1.jpg" type="video/mp4">
                                     </div>
                                 </a>
                             </article> <!-- entry -->
