--- a/index.html
+++ b/index.html
@@ -261,7 +261,9 @@
                             <article class="brick entry">
                                 <a href="https://github.com/manZarg/arduino-code-7-segment-display-counter/blob/master/arduino_code_counter_with_7-segment_display.ino" class="entry__link">
                                     <div class="entry__thumb">
-                                            <source src="images/folio/thes1.jpg" type="video/mp4">
+                                        <video autoplay muted controls>
+                                            <source src="images/folio/arduino code sample output.mp4" type="video/mp4">
+                                        </video>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
