--- a/index.html
+++ b/index.html
@@ -259,10 +259,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick entry">
-                                <a href="https://github.com/manZarg/arduino-code-7-segment-display-counter/blob/master/arduino_code_counter_with_7-segment_display.ino" class="entry__link">
                                     <div class="entry__thumb">
                                         <video autoplay muted controls>
-                                            <source src="images/folio/arduino code sample output.mp4" type="video/mp4">
+                                            <source src="images/folio/thesis1.mp4" type="video/mp4">
                                         </video>
                                     </div>
                                 </a>
