--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@
                                         </video>
                                     </div>
                             </article> <!-- entry -->
+
+                            <article class="brick entry">
+                                    <div class="entry__thumb">
+                                        <video autoplay muted controls>
+                                            <source src="images/folio/thesis1.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                            </article> <!-- entry -->
                             
                         </div> <!-- end bricks-wrapper -->
                     </div> <!-- end masonry -->
