--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li class="current"><a href="#intro" class="smoothscroll">Home</a></li>
                         <li><a href="#skills" class="smoothscroll">Skills</a></li>
                         <li><a href="#folio" class="smoothscroll">Projects</a></li>
-                        <li><a href="#folio" class="smoothscroll">My Thesis</a></li>
+                        <li><a href="#My Thesis" class="smoothscroll">My Thesis</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#contact" class="smoothscroll">Contact</a></li>
                         <li><a href="./resume/manuales-resume.pdf" target="_blank">Curriculum Vitae</a></li>
