--- a/index.html
+++ b/index.html
@@ -210,8 +210,14 @@
                     <h3 class="column lg-12 section-header__pretitle text-pretitle">My Thesis</h3>
                     <div class="column lg-12 stack-on-1100 section-header__primary">
                         <h2 class="title text-display-1">
-                            Here are some of my favorite projects I have done. Feel free to check them out.
+                            Defending research study was not easy. Here's My Thesis all about entitled: "CradleTalk: Advancing Parent-Infant Communication Through Real-Time Machine Learning Device Interpreting Dunstan Language"
                         </h2>
+                        <p>One major challenge for parents is understanding and meeting their baby's needs and wants, especially when the baby cannot directly communicate. This project aims to address this issue by developing a device called CRADLETALK, which uses real-time machine learning to
+                            interpret the sounds produced by infants. By translating the cries of infants into five key sounds (such as hunger, burping, discomfort, and sleepiness), the device helps parents better understand their baby's communication. The device captures the audio through a
+                            microphone and processes it using signal processing algorithms like Mel-Frequency Cepstral Coefficient (MFCC) and machine learning algorithms like Convolutional Neural Network (CNN). Additionally, the device can translate babble into audible voice, facilitating communication
+                            between infants and parents. The device's accuracy, efficiency, relevance, timeliness, and effectiveness will be evaluated through laboratory testing. The success rates for different sounds varied, but the final test showed improvements, with success rates increasing for
+                            certain sounds. Overall, this research project aims to enhance parent-infant communication and improve the way parents meet their baby's needs.
+                        </p>
                     </div>
             
                 </div> <!-- end section-header -->
