--- a/styles.html
+++ b/styles.html
@@ -74,6 +74,7 @@
     
                     <ul class="s-header__menu-links">
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
+                        <li><a href="index.html#thesis">Thesis</a></li>
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="index.html#folio">Work</a></li>
