--- a/styles.html
+++ b/styles.html
@@ -78,7 +78,7 @@
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="index.html#folio">Work</a></li>
-                        <li><a href="#footer" class="smoothscroll">Contact</a></li>
+                        <li><a href="index.html#footer" class="smoothscroll">Contact</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <ul class="s-header__social">
