--- a/index.html
+++ b/index.html
@@ -230,13 +230,9 @@
 
                             <!-- projects-container -->
                             <article class="brick brick--double entry">
-                                <a href="https://03c0903d.project-9ck.pages.dev/" class="entry__link">
+                                <a href="" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/second_web-project.png" alt="">
-                                    </div>
-                                    <div class="entry__info">
-                                        <div class="entry__cat">Front Page</div>
-                                        <h4 class="entry__title">EXPLORE BOHOL</h4>
+                                        <img src="images/folio/title.png" alt="">
                                     </div>
                                 </a>
                             </article> <!-- entry -->
