--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
                             <!-- projects-container -->
                             <article class="brick brick--double entry">
-                                <a href="" class="entry__link">
+                                <a href="https://drive.google.com/drive/u/0/folders/1qTDu-2mQDZvqmtLCnajT0loCJw20e3RD" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/title.png" alt="">
                                     </div>
