--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick brick--double entry">
-                                <a href="https://f6dc3ab1.project2-f25.pages.dev/" class="entry__link">
+                                <a href="" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/first_web.png" alt="">
+                                        <img src="images/folio/bluetooth.png" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Sample of Menu</div>
