--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
                             <!-- projects-container -->
                             <article class="brick brick--double entry">
-                                <a href="https://drive.google.com/file/d/1YGQYQbtoBIZq7rctgGLiUJ4n59msJ5wF/view?t=3" class="entry__link">
+                                <a href="#thesis" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/title.png" alt="">
                                     </div>
@@ -238,13 +238,13 @@
                             </article> <!-- entry -->
 
                             <article class="brick brick--double entry">
-                                <a href="" class="entry__link">
+                                <a href="https://drive.google.com/file/d/1YGQYQbtoBIZq7rctgGLiUJ4n59msJ5wF/view?t=3" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/bluetooth.png" alt="">
+                                        <img src="images/folio/device1.png" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Sample of Menu</div>
-                                        <h4 class="entry__title">Figaro Coffee Company</h4>
+                                        <div class="entry__cat">Sample Video</div>
+                                        <h4 class="entry__title">CradleTalk</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
