--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
                                 </a>
                             </article> <!-- entry -->
 
-                            <article class="brick entry">
+                             <article class="brick brick--double entry">
+                                <a href="" class="entry__link">
                                     <div class="entry__thumb">
-                                        <video autoplay muted controls>
-                                            <source src="images/folio/thesis1.mp4" type="video/mp4">
-                                        </video>
+                                        <img src="images/folio/thesis1.png" alt="">
                                     </div>
+                                </a>
                             </article> <!-- entry -->
                             
                         </div> <!-- end bricks-wrapper -->
