--- a/index.html
+++ b/index.html
@@ -250,19 +250,15 @@
                             </article> <!-- entry -->
 
                              <article class="brick brick--double entry">
-                                <a href="" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/thes1.jpg" alt="">
                                     </div>
-                                </a>
                             </article> <!-- entry -->
 
                             <article class="brick brick--double entry">
-                                <a href="" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/thes2.jpg" alt="">
                                     </div>
-                                </a>
                             </article> <!-- entry -->
                             
                         </div> <!-- end bricks-wrapper -->
@@ -327,12 +323,16 @@
                                 </a>
                             </article> <!-- entry -->
 
-                            <article class="brick entry">
+                           <article class="brick brick--double entry">
+                                <a href="https://drive.google.com/file/d/1YGQYQbtoBIZq7rctgGLiUJ4n59msJ5wF/view?t=3" class="entry__link">
                                     <div class="entry__thumb">
-                                        <video autoplay muted controls>
-                                            <source src="images/folio/thesis1.mp4" type="video/mp4">
-                                        </video>
+                                        <img src="images/folio/device1.png" alt="">
                                     </div>
+                                    <div class="entry__info">
+                                        <div class="entry__cat">Sample Video</div>
+                                        <h4 class="entry__title">CradleTalk</h4>
+                                    </div>
+                                </a>
                             </article> <!-- entry -->
                             
                         </div> <!-- end bricks-wrapper -->
