--- a/index.html
+++ b/index.html
@@ -322,19 +322,11 @@
                             </article> <!-- entry -->
 
                              <article class="brick entry">
-                                <a href="https://github.com/manZarg/arduino-code-7-segment-display-counter/blob/master/arduino_code_counter_with_7-segment_display.ino" class="entry__link">
-                                    <div class="entry__thumb">
-                                        <video autoplay muted controls>
-                                            <source src=".mp4" type="video/mp4">
-                                        </video>
-                                    </div>
-                                </a>
-                            </article> <!-- entry -->
-
-                           <article class="brick brick--double entry">
                                 <a href="https://drive.google.com/file/d/1YGQYQbtoBIZq7rctgGLiUJ4n59msJ5wF/view?t=3" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/device1.png" alt="">
+                                        <video autoplay muted controls>
+                                            <source src="thesis1.mp4" type="video/mp4">
+                                        </video>
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Sample Video</div>
