--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="column lg-12 stack-on-1100 section-header__primary">
                         <h2 class="title text-display-1">
                             Defending research study was not easy. Here's My Thesis all about entitled: "CradleTalk: Advancing Parent-Infant Communication Through Real-Time Machine Learning Device Interpreting Dunstan Language"
-                        </h2><br><br>
+                        </h2><br>
                         <p style="color: white;">One major challenge for parents is understanding and meeting their baby's needs and wants, especially when the baby cannot directly communicate. This project aims to address this issue by developing a device called CRADLETALK, which uses real-time machine learning to
                             interpret the sounds produced by infants. By translating the cries of infants into five key sounds (such as hunger, burping, discomfort, and sleepiness), the device helps parents better understand their baby's communication. The device captures the audio through a
                             microphone and processes it using signal processing algorithms like Mel-Frequency Cepstral Coefficient (MFCC) and machine learning algorithms like Convolutional Neural Network (CNN). Additionally, the device can translate babble into audible voice, facilitating communication
@@ -321,12 +321,14 @@
                                 </a>
                             </article> <!-- entry -->
 
-                             <article class="brick entry">
+                            <article class="brick entry">
+                                <a href="https://drive.google.com/file/d/1YGQYQbtoBIZq7rctgGLiUJ4n59msJ5wF/view?t=3" class="entry__link">
                                     <div class="entry__thumb">
                                         <video autoplay muted controls>
-                                            <source src="thesis1.mp4" type="video/mp4">
+                                            <source src="images/folio/thesis1.mp4" type="video/mp4">
                                         </video>
                                     </div>
+                                </a>
                             </article> <!-- entry -->
                             
                         </div> <!-- end bricks-wrapper -->
